k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: sms-frontend
  ports:
    - port: 80
      targetPort: 80
